feat: added goals module
